--- a/changelog.html
+++ b/changelog.html
@@ -35,13 +35,18 @@
         //     description: 'Added 3 new projects to jaimatthews.cf/balls. They are:',
         //     important: false
         // },
-                // {
+        // {
         //     change: "",
-        //     date: "XX MMM YYYY",
+        //     date: "XX MM YYYY",
         //     description: "",
         //     important: false
         // },
-
+        {
+            change: "Footer Fixed",
+            date: "29 Dec 2023",
+            description: "Footer CSS has be redone to ensure items remain in the centre despite Dark Mode toggle. On small screens, Dark Mode toggle now appears beneath other footer items & footer items are better laid out.",
+            important: false
+        },
         {
             change: 'New Illustrations Page',
             date: '21 Dec, 2023',
@@ -92,7 +97,7 @@
         },
         {
             change: "Small Changes",
-            date: "29 April, 2023",
+            date: "29 Apr, 2023",
             description: "Added new button to launchpad, which is locked at present. Added final date to countdown menu positioned at bottom right.",
             important: false
         },
