--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
 
         </script>    
 </body>
+<footer></footer>
 </html>
 <script src="cookies.js"></script>
 <script src="footer.js"></script>
