--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                     subt: 'Created by Jai Matthews & Aidan de Sousa',
                     date: '2019 - 2023',
                     href: 'mysterynight',
+                    portfolio: false,
                     category: '_site',
                     img: 'assets/tmn3.png',
                     img_top: false,
@@ -47,6 +48,7 @@
                     subt: 'Created by Jai Matthews & Tyrell Carli',
                     date: '2023',
                     href: 'jairell',
+                    portfolio: false,
                     category: '_site',
                     img: 'assets/IMG_3616.jpg',
                     img_top: true,
@@ -55,7 +57,9 @@
                     title: 'Book-a-Bench',
                     subt: 'Created by Jai Matthews',
                     date: '2022',
-                    href: 'https://bookabench.jaimatthews.cf/',
+                    // href: 'https://bookabench.jaimatthews.cf/',
+                    href: false,
+                    portfolio: 'read/portfoliocomingsoon',
                     category: '_site',
                     img: 'assets/bab_tall.png',
                     img_top: false,
@@ -64,7 +68,9 @@
                     title: 'Carli & Co.',
                     subt: 'Created by Jai Matthews & Mark Gurney',
                     date: '2021',
-                    href: 'https://carliandco.cf/',
+                    // href: 'https://carliandco.cf/',
+                    href: false,
+                    portfolio: false,
                     category: '_site',
                     img: 'assets/vaccine.png',
                     img_top: false,
@@ -74,6 +80,7 @@
                     subt: 'Created by Jai Matthews & Tyrell Carli',
                     date: '2021',
                     href: 'gettingtrashed',
+                    portfolio: 'read/portfoliocomingsoon',
                     category: '_site',
                     img: 'gettingtrashed/assets/image.jpg',
                     img_top: false,
@@ -83,6 +90,7 @@
                     subt: 'Created by Jai Matthews using w3.css',
                     date: '2020',
                     href: 'stressdetector',
+                    portfolio: false,
                     category: '_site',
                     img: 'stressdetector/Assets/SIK_Arduino_Uno.jpg',
                     img_top: false,
@@ -91,7 +99,8 @@
                     title: 'Untitled Game',
                     subt: 'JS Platformer',
                     date: 'Coming Soon',
-                    href: 'a',
+                    href: false,
+                    portfolio: 'read/portfoliocomingsoon',
                     category: '_game',
                     img: 'assets/hills.png',
                     img_top: false,
@@ -101,6 +110,7 @@
                     subt: 'Physics Simulation',
                     date: 'Oct 2023',
                     href: 'gravity',
+                    portfolio: 'read/portfoliocomingsoon',
                     category: '_game',
                     img: 'gravity/assets/gi1.png',
                     img_top: true,
@@ -109,7 +119,8 @@
                     title: 'Horse',
                     subt: 'Web-Based game',
                     date: 'Coming Soon',
-                    href: 'b',
+                    href: false,
+                    portfolio: 'read/portfoliocomingsoon',
                     category: '_game',
                     img: 'assets/horse.png',
                     img_top: true,
@@ -119,6 +130,7 @@
                     subt: 'HTML Canvas demonstration',
                     date: 'May 2023',
                     href: 'balls',
+                    portfolio: 'read/portfoliocomingsoon',
                     category: '_game',
                     img: 'balls/shatter.png',
                     img_top: false,
@@ -128,6 +140,7 @@
                     subt: 'Generates custom countdowns',
                     date: 'Mar 2023',
                     href: 'countdown',
+                    portfolio: 'read/portfoliocomingsoon',
                     category: '_game',
                     img: 'assets/IMG_3613.jpg',
                     img_top: false,
@@ -137,6 +150,7 @@
                     subt: 'Javascript account system',
                     date: 'Mar 2022',
                     href: 'tpc',
+                    portfolio: 'read/portfoliocomingsoon',
                     category: '_game',
                     img: 'assets/IMG_3612.jpg',
                     img_top: false,
@@ -146,6 +160,7 @@
                     subt: 'Research Project',
                     date: '25 Nov 2022',
                     href: 'read/rp.html',
+                    portfolio: false,
                     category: '_text',
                     img: 'assets/zelda.png',
                     img_top: false,
@@ -155,6 +170,7 @@
                     subt: 'Biography',
                     date: '18 Jun 2021',
                     href: 'read/hasntgotaname.html',
+                    portfolio: false,
                     category: '_text',
                     img: 'assets/kettle.png',
                     img_top: true,
@@ -164,6 +180,7 @@
                     subt: 'Miscellaneous online documents',
                     date: 'Jun 2020 - Present',
                     href: 'docs.html',
+                    portfolio: false,
                     category: '_misc',
                     img: 'assets/docs.jpg',
                     img_top: false,
@@ -173,6 +190,7 @@
                     subt: 'Series of artworks',
                     date: 'Dec 2020 - Present',
                     href: 'illustrations.html',
+                    portfolio: 'read/portfoliocomingsoon',
                     category: '_misc',
                     img: 'assets/illustrations/17.png',
                     img_top: false,
@@ -182,6 +200,7 @@
                     subt: "Makes this site's written documents.",
                     date: '31 Dec 2023',
                     href: 'read/articleEditor.html',
+                    portfolio: 'read/portfoliocomingsoon',
                     category: '_misc',
                     img: 'assets/article.png',
                     img_top: false,
@@ -191,6 +210,7 @@
                     subt: 'No longer in use',
                     date: 'Jun 2022 - Apr 2023',
                     href: 'archive',
+                    portfolio: false,
                     category: '_misc',
                     img: 'assets/icon-00.png',
                     img_top: false,
@@ -204,7 +224,11 @@
                     img_top = ""
                 }
                 hypertext = `
-                <div onclick="highlight(this)" class="link ${links[i].category}" data-href="${links[i].href}">
+                <div onclick="highlight(this)" class="link ${links[i].category}" 
+                    data-href="${links[i].href}"
+                    data-linkid="${i}"
+                    data-portfolio="${links[i].portfolio}"
+                >
                     <img src="${links[i].img}" class="${img_top}">
                     <div class="topText">
                         <h1>${links[i].title}</h1>
