--- a/read/changelog.html
+++ b/read/changelog.html
@@ -49,6 +49,12 @@
         //     important: false
         // },
         {
+            change: "Portfolio & Removals",
+            date: "5 March 2024",
+            description: "Added a feature called 'Portfolio', where you can read information about many projects. Content is not yet available, but (i) button present for select projects. Additionally, Carli&Co and BookABench are no longer accessible due to hosting difficulties. Hopefully this is temporary.",
+            important: false
+        },
+        {
             change: "New Domain Name",
             date: "8 February 2024",
             description: "Website has been migrated from jaimatthews.cf to <a href='http://jaimatthews.com/'>JaiMatthews.com</a>. Minor visual changes to Change Log.",
