Game Art Changed

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                     href: false,
                     portfolio: 'read/portfoliocomingsoon',
                     category: '_game',
-                    img: 'assets/hills.png',
+                    img: 'assets/sky.png',
                     img_top: false,
                 },
                 {
