--- a/404.html
+++ b/404.html
@@ -7,8 +7,8 @@
     <title>404 Page not found</title>
     <link rel="icon" type="image/x-icon" href="jaimatthews.com/assets/iconR-01.png">
 
-    <link rel="stylesheet" href="jaimatthews.com/stylesheet.css">
-    <link rel="stylesheet" href="jaimatthews.com/article.css">
+    <link rel="stylesheet" href="https://jaimatthews.com/stylesheet.css">
+    <link rel="stylesheet" href="https://jaimatthews.com/article.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,17 +17,17 @@
 </head>
 <body>
     <canvas></canvas>
-    <a href="jaimatthews.com"><img src='jaimatthews.com/assets/iconR-01.png' class="icon small"></a>
+    <a href="https://jaimatthews.com"><img src='https://jaimatthews.com/assets/iconR-01.png' class="icon small"></a>
     <br>
     <div class="article" style="padding-top: 80px; padding-bottom: 80px;">
         <h1 style="text-align: center;">404 Error</h1>
         <h2 style="text-align: center;">Page Not Found</h2>
         <p style="text-align: center;">The page you're looking for does not exist.</p>
-        <p style="text-align: center;">Click <a href="jaimatthews.com">here</a> to go home and navigate to your desired page.</p>
+        <p style="text-align: center;">Click <a href="https://jaimatthews.com">here</a> to go home and navigate to your desired page.</p>
     </div>
 </body>
 </html>
-<script src="jaimatthews.com/js/cookies.js"></script>
-<script src="jaimatthews.com/js/footer.js"></script>
-<script src="jaimatthews.com/js/textScripts.js"></script>
-<script src="jaimatthews.com/js/canvas.js"></script>
+<script src="https://jaimatthews.com/js/cookies.js"></script>
+<script src="https://jaimatthews.com/js/footer.js"></script>
+<script src="https://jaimatthews.com/js/textScripts.js"></script>
+<script src="https://jaimatthews.com/js/canvas.js"></script>
