--- a/art.html
+++ b/art.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Illustrations | Jai Matthews</title>
+    <title>Artworks | Jai Matthews</title>
     <link rel="icon" type="image/x-icon" href="assets/iconR-01.png">
 
     <link rel="stylesheet" href="stylesheet.css">
+    <link id="colourTheme" rel="stylesheet" href="themes/lightMain.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,10 +19,10 @@
     <canvas></canvas>
     <a href="index.html"><img src='assets/iconR-01.png' class="icon small"></a>
     <div class="heading">
-        <p>Illustrations</p>
+        <p>Artworks</p>
     </div>
     <div class="illWindow">
-        <p>My illustrations are shown below</p>
+        <p>My artworks are shown below</p>
 
         <!-- <div class="illContainer" id="carousel">
             <div>
@@ -50,7 +51,7 @@
         </div> -->
 
         <div class="media">
-            <p style="color: red;">Loading illustrations...</p>
+            <p style="color: red;">Loading images...</p>
 
 
 
@@ -61,7 +62,7 @@
     </div>
     <div class="illsCover" id="cover">
         <div class="content">
-            <h1 id="number">Illustrations</h1>
+            <h1 id="number">Artworks</h1>
             <p><a id="link" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i></a><i class="fa fa-times" aria-hidden="true" onclick="hide()"></i></p>
             <div id="box" class="contentContainer">
             </div>
