--- a/404.html
+++ b/404.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Page not found</title>
-    <link rel="icon" type="image/x-icon" href="jaimatthews.com/assets/iconR-01.png">
+    <link rel="icon" type="image/x-icon" href="https://jaimatthews.com/assets/iconR-01.png">
 
     <link rel="stylesheet" href="https://jaimatthews.com/stylesheet.css">
+    <link id="colourTheme" rel="stylesheet" href="themes/lightMain.css">
     <link rel="stylesheet" href="https://jaimatthews.com/article.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
