--- a/countdown/index.html
+++ b/countdown/index.html
@@ -84,10 +84,10 @@
         <input class="abled" type="date" id='date'><br>
         <input class="abled" type="time" id="time"><br>
         <button onclick="generate()">Generate!</button>
-        <p class="maintext">Existing Countdowns:</p><br>
+        <!-- <p class="maintext">Existing Countdowns:</p><br>
         <p class="subtext"><a href="main.html?title=Doctor%20Who%27s%2060th%20Anniversary&datetime=2023-11-25%2019:00&background=https://ichef.bbci.co.uk/images/ic/1920x1080/p0ggbf9s.jpg">Doctor Who's 60th <i class="fa fa-external-link" aria-hidden="true"></i></a></p>
         <p class="subtext"><a href="main.html?title=Tears%20of%20the%20Kingdom&datetime=2023-05-12%2009:00&background=assets/totk2.webp">Tears of the Kingdom <i class="fa fa-external-link" aria-hidden="true"></i></a></p>
-        <p class="subtext"><a href="main.html?title=Christmas%202023&datetime=2023-12-25%2009:00&background=assets/xmas.jfif">Christmas 2023 <i class="fa fa-external-link" aria-hidden="true"></i></a></p>
+        <p class="subtext"><a href="main.html?title=Christmas%202023&datetime=2023-12-25%2009:00&background=assets/xmas.jfif">Christmas 2023 <i class="fa fa-external-link" aria-hidden="true"></i></a></p> -->
     </div>
     <p class="home"><a style="color: black; text-decoration: underline;" href="../index.html">Exit</a></p>
 </body>
