--- a/read/terms.html
+++ b/read/terms.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/x-icon" href="../assets/iconR-01.png">
 
     <link rel="stylesheet" href="../stylesheet.css">
+    <link id="colourTheme" rel="stylesheet" href="themes/lightMain.css">
     <link rel="stylesheet" href="../article.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
