--- a/countdown/main.html
+++ b/countdown/main.html
@@ -9,7 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 <style>
     body {
@@ -42,36 +43,39 @@
         text-align: center;
         margin: 0;
     }
+    .home, .end {
+        display: inline-block;
+        vertical-align: middle;
+        height: 20px;
+        line-height: 20px;
+        background-color: white;
+        padding: 10px;
+        border-radius: 30px;
+    }
     .home {
+        font-size: 20px;
+        width: 20px;
+        transition-duration: 300ms;
+    }
+    .end {
+        font-size: 10px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    .home:hover {
+        background-color: black;
+        color: white;
+    }
+    .info {
         bottom: 0;
         left: 50%;
         position: fixed;
         font-family: 'Quicksand', sans-serif;
-        font-weight:900;
+        font-weight: 900;
         transform: translate(-50%);
         color: black;
-    }
-    .info {
-        bottom: 0;
-        right: 0;
-        position: fixed;
-        font-family: 'Quicksand', sans-serif;
-        font-weight:900;
-        color: black;
-        font-size: 10px;
-        padding-right: 20px;
-    }
-    .textShadow {
-        text-shadow: 
-        1px 0px 0px white,
-        0.7px -0.7px 0px white,
-        0px -1px 0px white,
-        -0.7px -0.7px 0px white,
-        -1px 0px 0px white,
-        -0.7px 0.7px 0px white,
-        0px 1px 0px white,
-        0.7px 0.7px 0px white
-        ;
+        margin-bottom: 20px;
+        text-align: center;
     }
 </style>
 <body>
@@ -80,9 +84,10 @@
         <p id="string" class="maintext"></p>
         <p class="subtext" id="subtext">Seconds Remaining</p>
     </div>
-    <p class="home textShadow"><a style="color: black;" href="index.html">Home</a></p>
-    <p class="info textShadow" id="info">Hello</p>
-    
+    <div class="info">
+        <p class="end" id="info">Hello</p>
+        <a style="color: black;" href="index.html"><p class="home"><i class="fa fa-home" aria-hidden="true"></i></p></a>
+    </div>
 </body>
 </html>
 <script>
