Countdown glitch fix

--- a/countdown/main.html
+++ b/countdown/main.html
@@ -19,6 +19,7 @@
         background-size: cover;
         background-attachment: fixed;
         background-position: center;
+        margin: 0;
     }
     .string {
         background-color: white;
@@ -67,6 +68,7 @@
         color: white;
     }
     .info {
+        width: 100vw;
         bottom: 0;
         left: 50%;
         position: fixed;
@@ -74,7 +76,7 @@
         font-weight: 900;
         transform: translate(-50%);
         color: black;
-        margin-bottom: 20px;
+        /* margin-bottom: 20px; */
         text-align: center;
     }
 </style>
