Https, and looking forward
See changelog for June 1. I also wrote some of the portfolios, but they're not linked to yet.

--- a/read/TEXTDEMO.html
+++ b/read/TEXTDEMO.html
@@ -31,6 +31,7 @@
         
         <img src="../assets/demo-01.png" class="logo"><br>
         <img src="../assets/demo-02.png" class="small"><br>
+        <img src="../assets/demo-04.png" class="standard"><br>
         <h6>Image descriptions w h6</h6>
         <img src="../assets/demo-03.png" class="banner"><br>
         
