--- a/read/articleEditor.html
+++ b/read/articleEditor.html
@@ -22,7 +22,12 @@
     <br>
     <div class="articleEdit">
         <p>Text Editor provided by Quill</p>
-        <div class="editorBox" id="editor"></div>
+        <div class="editorBox" id="editor">
+            <h1>Untitled Document</h1>
+            <h2>Jai Matthews ⋅ DD Month YYYY</h2>
+            
+            <p>The quick brown fox jumped over the lazy dog...</p>
+        </div>
         <input type="text" id="url" autocomplete="off" placeholder="File name..." required>
         <button onclick="save()" class="save">Download</button>
         <p class="goHome"><i class="fa fa-caret-left" aria-hidden="true"></i> <a href="../index.html">Return Home</a></p>
