--- a/read/artworks.html
+++ b/read/artworks.html
@@ -21,10 +21,17 @@
     <a href="../index.html"><img src='../assets/iconR-01.png' class="icon small"></a>
     <br>
     <div class="article">
-        <h1>Coming Soon!</h1>
-        <h2>JaiMatthews.com/Portfolio</h2>
-        <p>Thanks for showing interest in the behind-the-scenes for my projects! Unfortunately, I am still writing out all of the individual pages. I'm hoping to finish them before the end of June then release them all at once.</p>
-        <p>To return to the home page, click below:</p>
+        <h1>Artworks</h1>
+        <h2>Jai Matthews</h2>
+        <img src="../assets/portfolio_art_a.png" class="banner">
+        <p>Since late 2020 I've been creating a number of artworks <span style="color: rgb(4, 12, 40);">—</span> often vector-based landscapes <span style="color: rgb(4, 12, 40);">—</span> and posting them to my <a href="https://www.instagram.com/jaimatthews1/" target="_blank">Instagram</a>.</p>
+        <p>The 'artworks' page on my website uses the Instagram Basic Display API to fetch the posts from Instagram to display on my website. With the API key, I have access to a JSON file containing the images ready to be displayed. Then, the page constructs the HTML from this information and displays it.</p>
+        <img src="../assets/portfolio_art_c.png" class="standard">
+        <h6>JSON received from Instagram API.</h6>
+        <p>The page is equipped to handle and display images of different aspect ratios and can display all items 'carousel' of images.</p>
+        <img src="../assets/portfolio_art_d.png" class="standard">
+        <h6>The artworks page.</h6>
+        <p>You can see the artworks page on any device by clicking <a href="https://jaimatthews.com/art" target="_blank">here</a>.</p>
         <p class="goHome"><i class="fa fa-caret-left" aria-hidden="true"> </i> <a href="../index.html">Return Home</a> </p>
     </div>
 </body>
