--- a/read/terms.html
+++ b/read/terms.html
@@ -22,7 +22,7 @@
     <br>
     <div class="article">
         <h1>Terms & Conditions</h1>
-        <h2>jaimatthews.cf</h2>
+        <h2>jaimatthews.com</h2>
         <!-- <p>Body text.</p> -->
         <h3>Cookies</h3>
         <p>To store preferences for light mode/ dark mode, this website uses cookies. It's just a simple string stating 'dark=true/false' saved client side. By using this website you consent to such cookies being stored. Cookies for this website are cleared every time you close the browser, so you won't need to worry about them sticking around for long. The website will work in its entirety if you have cookies disabled, but you will not be able to switch between light mode & dark mode.</p>
