--- a/read/contact.html
+++ b/read/contact.html
@@ -22,7 +22,7 @@
     <br>
     <div class="article">
         <h1>Contact Form</h1>
-        <h2>jaimatthews.cf</h2>
+        <h2>jaimatthews.com</h2>
         <p>To contact me, please fill in the form below and I will get back to you as soon as possible.</p>
         <form action="https://formspree.io/f/xdobyldl" method="POST">
             <h3>Your Name</h3>
