Docs CSS change

--- a/read/changelog.html
+++ b/read/changelog.html
@@ -29,7 +29,7 @@
 </body>
 </html>
 <script>
-    retrieve("changes.json")
+    retrieve("../changes.json")
         function retrieve(url) {
             fetch(url)
                 .then((response) => response.json())
