--- a/read/gravity.html
+++ b/read/gravity.html
@@ -189,5 +189,5 @@
 </html>
 <script src="../js/cookies.js"></script>
 <script src="../js/footer.js"></script>
-<!-- <script src="../js/textScripts.js"></script> -->
+<script src="../js/textScripts.js"></script>
 <script src="../js/canvas.js"></script>
