Finished portfolios & CNC
Portfolios are all done and linked to. I also removed the horse link from the site (I was never going to finish it). And CNC is back on the website, but with only the static components (it's okay - the website was mostly static).

--- a/read/gravity.html
+++ b/read/gravity.html
@@ -178,7 +178,7 @@
         <img class="standard" src="../assets/portfolio_gravity_ag.png">
         <h6>The select object algorithm</h6>
         <img class="standard" src="../assets/portfolio_gravity_ah.png">
-        <h6>The flowchart, having been converting to JavaScript</h6>
+        <h6>The flowchart, having been converted to JavaScript</h6>
         <img class="logo" src="../gravity/assets/icon.png">
         <h3>Afterword</h3>
         <p>If you got through that, I commend you. Given I had done all this work for the SACE submission, I thought I may as well put it here too. Surprisingly, I only covered about two thirds of the content in the original submission! I left out the videos, extra details, stakeholder correspondence, and a lengthy evaluation! If you're interested in seeing that (fuck knows why), the original PowerPoint presentation is available <a href="https://jaimatthews.com/gravity/about%20AT3.pdf" target="_blank">here</a>.</p>
