--- a/read/articleEditor.html
+++ b/read/articleEditor.html
@@ -18,6 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <canvas></canvas>
     <a href="../index.html"><img src='../assets/iconR-01.png' class="icon small"></a>
     <br>
     <div class="articleEdit">
@@ -37,6 +38,7 @@
 <script src="../js/cookies.js"></script>
 <script src="../js/footer.js"></script>
 <script src="../js/textScripts.js"></script>
+<script src="../js/canvas.js"></script>
 
 <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 <script src="https://cdn.quilljs.com/1.3.6/quill.min.js"></script>
