--- a/docs.html
+++ b/docs.html
@@ -23,7 +23,7 @@
     <div class="article">
         <h1>Documents</h1>
         <h2>jaimatthews.com</h2>
-        <p>In the past, some of the following have been online but inaccessible without the link. By moving such documents here, it becomes easier to share access to people when needed. Few will be of any use to anyone, but now they are available to view. Enjoy!</p>
+        <p>In the past, some of the following have been online but inaccessible without the link. By moving such documents here, it becomes easier to share access when needed. Few will be of any use to anyone, but now they are available to view. Enjoy!</p>
         <div class="docsList">
 
         </div>        
