--- a/404.html
+++ b/404.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Page not found</title>
-    <link rel="icon" type="image/x-icon" href="https://jaimatthews.com/assets/icon.png">
+    <link rel="icon" type="image/x-icon" href="/assets/icon.png">
 
-    <link rel="stylesheet" href="https://jaimatthews.com/stylesheet.css">
-    <link id="colourTheme" rel="stylesheet" href="themes/lightMain.css">
-    <link rel="stylesheet" href="https://jaimatthews.com/article.css">
+    <link rel="stylesheet" href="/stylesheet.css">
+    <link id="colourTheme" rel="stylesheet" href="/stylesheet.css">
+    <link rel="stylesheet" href="/article.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,17 +18,17 @@
 </head>
 <body>
     <canvas></canvas>
-    <a href="https://jaimatthews.com"><img src='https://jaimatthews.com/assets/icon.png' class="icon small"></a>
+    <a href="/index.html"><img src='/assets/icon.png' class="icon small"></a>
     <br>
     <div class="article" style="padding-top: 80px; padding-bottom: 80px;">
         <h1 style="text-align: center;">404 Error</h1>
         <h2 style="text-align: center;">Page Not Found</h2>
         <p style="text-align: center;">The page you're looking for does not exist.</p>
-        <p style="text-align: center;">Click <a href="https://jaimatthews.com">here</a> to go home and navigate to your desired page.</p>
+        <p style="text-align: center;">Click <a href="/index.html">here</a> to go home and navigate to your desired page.</p>
     </div>
 </body>
 </html>
-<script src="https://jaimatthews.com/js/cookies.js"></script>
-<script src="https://jaimatthews.com/js/footer.js"></script>
-<script src="https://jaimatthews.com/js/textScripts.js"></script>
-<script src="https://jaimatthews.com/js/canvas.js"></script>
+<script src="/js/cookies.js"></script>
+<script src="/js/footer.js"></script>
+<script src="/js/textScripts.js"></script>
+<script src="/js/canvas.js"></script>
