--- a/read/terms.html
+++ b/read/terms.html
@@ -53,7 +53,7 @@
         <p>You cannot re-use the website’s</p>
         <ul>
             <li>HTML, CSS or JavaScript Code</li>
-            <li>Visual image assets (with the exception of the downloadable illustrations).</li>
+            <li>Visual image assets.</li>
         </ul>
         <p>The breaking of these rules could result in punishments such as;</p>
         <ul>
