Quick Insta Fixes

--- a/instagram.html
+++ b/instagram.html
@@ -19,10 +19,10 @@
     <canvas></canvas>
     <a href="index.html"><img src='assets/icon.png' class="icon small"></a>
     <div class="heading">
-        <p>Instagram Feed</p>
+        <p>Instagram Page</p>
     </div>
     <div class="illWindow">
-        <p>My Instagram feed is shown below</p>
+        <p>Exrtacts from my Instagram page are shown below</p>
 
         <!-- <div class="illContainer" id="carousel">
             <div>
