--- a/read/canvascastle.html
+++ b/read/canvascastle.html
@@ -22,9 +22,9 @@
     <br>
     <div class="article">
         <h1>Canvas Castle</h1>
-        <h2>Jai Matthews ⋅ 31 July 2024</h2>
+        <h2>Jai Matthews ⋅ 2025</h2>
         <p>Canvas Castle (working title) is an upcoming web game I've been working on. The game is a platformer make purely in JavaScript and on the HTML canvas. All of the rendering, level encoding, physics, art, and animation is all my own work and made without a dedicated game engine. In this sense, it's much more of an exercise in difficult programming than it is a high quality video game (after all, why one earth would you make a game in JavaScript!). Nonetheless, I've tried to put in as much effort as I can to create a good product.</p>
-        <p>I'm hoping to release Canvas Castle on 31 July 2024, at which time I will add more to this article and go over some of the fascinating code I've had to write for the game.</p>
+        <p>I'm hoping to release Canvas Castle in 2025, at which point I will add more to this article and go over some of the fascinating code I've had to write for the game.</p>
         <img class="banner" src="../assets/portfolio/game_a.png">
         <p class="goHome"><i class="fa fa-caret-left" aria-hidden="true"> </i> <a href="../index.html">Return Home</a> </p>
     </div>
