Home Page Redirect, Many Changes, First Ember push

--- a/balls/index.html
+++ b/balls/index.html
@@ -104,7 +104,7 @@
     </div>
     
     <br>
-    <p class="home"><a href="../index.html" class="home">jaimatthews.cf</a></p>
+    <p class="home"><a href="../index.html" class="home">jaimatthews.com</a></p>
 </body>
 </html>
 <script id="linkto" src="balls.js"></script>
