--- a/ember/open.html
+++ b/ember/open.html
@@ -21,28 +21,14 @@
     </div>
     <div id="frontBox">
         <div id="frontContent">
-            <div id="markupContents">
-                <div id="screen1" class="fadeIn delay">
-                    <h1>For the best experience, use a<br>device with trackpad or mouse</h1>
-                    <button onclick="toMenu()">I Understand</button>
-                </div>
-                <div id="screen2" class="fadeIn" style="display: none;">
-                    <img src="resources/icon-main.png">
-                    <h1>Ember</h1>
-                    <h2>An Interactive Animation by Jai Matthews</h2>
-                    <br><button onclick="begin()">Begin</button>
-                    <br><button>Second Button</button>
-                    <br><button>Third</button>
-                </div>
-            </div>
             <canvas></canvas>
         </div>
     </div>
     <div id="overlay">
-        <!-- <div id="logo">
+        <div id="logo">
             <img src="resources/icon-main.png">
             <p>Ember</p>
-        </div> -->
+        </div>
         <div id="jai">
             <a href="../" target="_blank"><p>JaiMatthews.com</p></a>
         </div>
