--- a/gossips/index.html
+++ b/gossips/index.html
@@ -95,7 +95,7 @@
     <hr>
     
     <div style="text-align: center; font-style: italic; margin-bottom: 50px; color: rgb(70, 70, 117);">
-        <p>Gossips Christams 2023 · <a href="https://jaimatthews.cf/index.html?page=0" style="color: rgb(70, 70, 117);">jaimatthews.cf</a></p>
+        <p>Gossips Christams 2023 · <a href="https://jaimatthews.com/index.html?page=0" style="color: rgb(70, 70, 117);">jaimatthews.com</a></p>
     </div>
 
 </body>
