--- a/mysterynight/info.html
+++ b/mysterynight/info.html
@@ -27,7 +27,7 @@
         <div style="display: inline-block; width: 400px; vertical-align: top;">
             <p style="text-decoration: underline;">Jai Matthews</p>
             <i>jai.matthews2005@gmail.com</i><br><br>
-            <i>jaimatthews.cf</i>
+            <i>jaimatthews.com</i>
         </div>
 
         <br><br>
